[gd_scene load_steps=10 format=3 uid="uid://cpwau54raobl4"]

[ext_resource type="Script" uid="uid://3s6hkk863ghb" path="res://ui/main_menu.gd" id="1_0dkrt"]
[ext_resource type="PackedScene" uid="uid://boppjtnktgfvk" path="res://ui/components/ui_manager_component.tscn" id="1_t7e0r"]
[ext_resource type="PackedScene" uid="uid://dsl0kv6s3m8q7" path="res://scenes/levels/level.tscn" id="2_ei257"]
[ext_resource type="Theme" uid="uid://cldnd0m2hso1b" path="res://assets/theme.tres" id="3_rmr83"]
[ext_resource type="Texture2D" uid="uid://bvr24xd2vf8qx" path="res://assets/images/ui/catpurr.png" id="3_wk0pr"]
[ext_resource type="PackedScene" uid="uid://do68no0xq8mge" path="res://ui/button.tscn" id="4_8uxxo"]

[sub_resource type="Animation" id="Animation_8uxxo"]
resource_name = "loop_move"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(0.450625, 0.574349, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -2), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_ei257"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ei257"]
_data = {
&"RESET": SubResource("Animation_ei257"),
&"loop_move": SubResource("Animation_8uxxo")
}

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0dkrt")
start_scene = ExtResource("2_ei257")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.141176, 0.623529, 0.870588, 1)

[node name="UiManagerComponent" parent="." instance=ExtResource("1_t7e0r")]
unique_name_in_owner = true
first_unclosable = true

[node name="BoxContainer" type="BoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -104.0
offset_top = 72.0
offset_right = -8.0
offset_bottom = -28.0
grow_horizontal = 0

[node name="ButtonBox" type="VBoxContainer" parent="BoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="Panel" type="Panel" parent="BoxContainer/ButtonBox"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("3_rmr83")

[node name="PlayButton" parent="BoxContainer/ButtonBox/Panel" instance=ExtResource("4_8uxxo")]
unique_name_in_owner = true
layout_mode = 2
offset_right = 96.0
offset_bottom = 24.0

[node name="Panel2" type="Panel" parent="BoxContainer/ButtonBox"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("3_rmr83")

[node name="PlayButton" parent="BoxContainer/ButtonBox/Panel2" instance=ExtResource("4_8uxxo")]
layout_mode = 2
offset_right = 96.0
offset_bottom = 24.0

[node name="Panel3" type="Panel" parent="BoxContainer/ButtonBox"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("3_rmr83")

[node name="PlayButton" parent="BoxContainer/ButtonBox/Panel3" instance=ExtResource("4_8uxxo")]
layout_mode = 2
offset_right = 96.0
offset_bottom = 24.0

[node name="Panel" type="Control" parent="."]
anchors_preset = 0
offset_top = -0.013829
offset_bottom = -0.013829
theme = ExtResource("3_rmr83")

[node name="TextureRect" type="TextureRect" parent="Panel"]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 199.0
offset_bottom = 60.0
texture = ExtResource("3_wk0pr")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_ei257")
}
speed_scale = 0.4

[connection signal="pressed" from="BoxContainer/ButtonBox/Panel/PlayButton" to="." method="_on_play_button_pressed"]
